# tiktok-faceless

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  tiktok_auth.py  tiktok_upload.py  tokens.json
.certs/: cert.pem  key.pem
.claude/tracking/: charts.html  tokens.json
.github/workflows/: ci.yml  pages.yml
_bmad-output/brainstorming/: brainstorming-session-2026-03-08-001.md
_bmad-output/implementation-artifacts/: 1-1-project-initialization-and-cicd-foundation.md  1-2-core-state-and-database-models.md  1-3-external-api-client-wrappers.md  1-4-video-production-agent.md  1-5-basic-script-and-affiliate-link-generation.md  1-6-publishing-agent-with-suppression-resistant-cadence.md  1-7-orchestrator-pipeline-wiring-and-crash-recovery.md  2-1-product-validation-via-buyer-intent-signals.md  2-2-comment-mining-for-buyer-language.md  2-3-multi-niche-product-scanning.md  2-4-full-script-generation-hook-archetypes-persona.md  2-5-commission-per-view-decay-detection.md  2-6-commission-tracking-per-video-product-niche.md  3-1-niche-scoring-tournament-ranking.md  3-2-phase-aware-agent-behavior.md  3-3-automatic-tournament-winner-detection-commit.md  3-5-niche-decay-re-tournament.md  (+20 more)
dashboard/: app.py  auth.py
deploy/: Caddyfile  dashboard.service  pipeline.service  pipeline.timer  setup.sh  token-refresh.service  token-refresh.timer
docs/: callback.html  privacy.html  terms.html
systemd/: tiktok-faceless.service
tests/: conftest.py
tiktok_faceless/: __init__.py  config.py  graph.py  main.py  state.py
tools/: refresh_tiktok_token.py  seed_products.py
(+118 files in other folders)
