[project]
name = "tiktok-faceless"
version = "0.1.0"
description = "Autonomous TikTok affiliate content system"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.1.0",
    "langsmith>=0.7.0",
    "elevenlabs>=2.38.0",
    "httpx>=0.28.0",
    "tenacity>=9.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.18.0",
    "pydantic>=2.12.0",
    "python-dotenv",
    "streamlit>=1.55.0",
    "streamlit-autorefresh",
    "psycopg2-binary",
    "fal-client>=0.13.1",
    "anthropic>=0.84.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["tools/", "tiktok_upload.py", "tiktok_auth.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
